Added the grid style

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       </div>
     </div>
   </header>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prettier/2.7.1/standalone.js"></script>
 </body>
 
 </html>
